exports[`invalid(1): {\"name\": \"foo\"} 1`] = `

[Input]
  1 | {"name": "foo"}

`;

exports[`invalid(1): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ The \`type\` field should be \`"module"\`.

Suggestion 1/1: Set \`"type": "module"\`.:
  1 | {"name": "foo", "type": "module"}

`;

exports[`invalid(2): {} 1`] = `

[Input]
  1 | {}

`;

exports[`invalid(2): {} 2`] = `

Message:
> 1 | {}
    | ^^ The \`type\` field should be \`"module"\`.

Suggestion 1/1: Set \`"type": "module"\`.:
  1 | {"type": "module"}

`;

exports[`invalid(3): {\n} 1`] = `

[Input]
  1 | {
  2 | }

`;

exports[`invalid(3): {\n} 2`] = `

Message:
> 1 | {
    | ^
> 2 | }
    | ^ The \`type\` field should be \`"module"\`.

Suggestion 1/1: Set \`"type": "module"\`.:
  1 | {
  2 | 	"type": "module"
  3 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\"\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo"
  3 | }

`;

exports[`invalid(4): {\n\t\"name\": \"foo\"\n} 2`] = `

Message:
> 1 | {
    | ^
> 2 | 	"name": "foo"
    | ^^^^^^^^^^^^^^
> 3 | }
    | ^ The \`type\` field should be \`"module"\`.

Suggestion 1/1: Set \`"type": "module"\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"type": "module"
  4 | }

`;

exports[`invalid(5): {\"type\": \"commonjs\"} 1`] = `

[Input]
  1 | {"type": "commonjs"}

`;

exports[`invalid(5): {\"type\": \"commonjs\"} 2`] = `

Message:
> 1 | {"type": "commonjs"}
    |          ^^^^^^^^^^ The \`type\` field should be \`"module"\`.

Suggestion 1/1: Set \`"type": "module"\`.:
  1 | {"type": "module"}

`;
